# hdf5-rs

./: .gitignore  Cargo.toml  README.md
hdf5/: Cargo.toml
hdf5-derive/: Cargo.toml
hdf5-derive/src/: lib.rs
hdf5-derive/tests/: test.rs
hdf5-types/: Cargo.toml
hdf5-types/src/: array.rs  dyn_value.rs  h5type.rs  lib.rs  string.rs
hdf5/examples/: advanced_filters.rs  blosc.rs  chunking.rs  compound.rs  corpus.rs  denseattr.rs  extlinks.rs  final_checks.rs  fuzz.rs  gapclose.rs  interop2.rs  interop_harness.rs  latest.rs  mpi_demo.rs  mpi_rs_demo.rs  newstructs.rs  quickstart.rs  rlx_mlp.rs  rlx_tensor.rs  round6a.rs  round6b.rs  simple.rs  smoke.rs  soff_nbit.rs  sohm.rs  sohm_vds_write.rs  szfile.rs  szval.rs  tour.rs  ubtest.rs  userblock.rs  vds.rs  vlen.rs
hdf5/src/: class.rs  dim.rs  error.rs  globals.rs  h5i.rs  handle.rs  lib.rs  macros.rs  model.rs  mpi.rs  sync.rs  util.rs
hdf5/src/format/: blosc.rs  checksum.rs  convert.rs  datatype.rs  filters.rs  mod.rs  reader.rs  szip.rs  v2.rs  vds.rs  writer.rs
hdf5/src/hl/: attribute.rs  chunks.rs  container.rs  dataset.rs  dataspace.rs  datatype.rs  extents.rs  file.rs  filters.rs  group.rs  location.rs  object.rs  plist.rs  selection.rs
hdf5/src/hl/plist/: common.rs  dataset_access.rs  dataset_create.rs  file_access.rs  file_create.rs  link_create.rs
hdf5/tests/: test_roundtrip.rs
interop/: api_diff.sh  check_h5py.py  check_szip.py  make_corpus.py  make_sohm.py
