[workspace]
resolver = "2"
members = ["hdf5", "hdf5-types", "hdf5-derive"]

[workspace.package]
version = "0.1.0"
rust-version = "1.85.0"
authors = ["Eugene Hauptmann <eugenehp@users.noreply.github.com>"]
keywords = ["hdf5", "h5py", "netcdf", "scientific", "dataset"]
categories = ["science", "filesystem", "encoding"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/eugenehp/hdf5-rs"
homepage = "https://github.com/eugenehp/hdf5-rs"

[workspace.dependencies]
# external
cfg-if = "1.0"
half = { version = "2.2", default-features = false }
libc = "0.2"
num-complex = { version = "0.4", default-features = false }
# internal
hdf5-no-c = { version = "0.1.0", path = "hdf5" }
hdf5-no-c-derive = { version = "0.1.0", path = "hdf5-derive" }
hdf5-no-c-types = { version = "0.1.0", path = "hdf5-types" }

[profile.release]
opt-level = 3
