[package]
name = "hdf5-no-c-types"
description = "Native Rust equivalents of HDF5 types (pure-Rust port)."
readme = "README.md"
categories = ["encoding"]
version.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[lib]
# published as `hdf5-no-c-types`; the library keeps the `hdf5_types` crate
# name so `use hdf5_types::...` code compiles unchanged
name = "hdf5_types"
path = "src/lib.rs"

[features]
default = []
h5-alloc = []
complex = ["dep:num-complex"]
f16 = ["dep:half"]

[dependencies]
ascii = "1.1"
cfg-if = { workspace = true }
libc = { workspace = true }
num-complex = { workspace = true, optional = true }
half = { workspace = true, optional = true }

[dev-dependencies]
quickcheck = { version = "1.0", default-features = false }
unindent = "0.2"

[package.metadata.docs.rs]
features = ["f16", "complex"]
